--- a/libs/simulation/Cargo.toml
+++ b/libs/simulation/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nalgebra = { version = "0.26", features = ["rand-no-std"] }
+rand = "0.8"
