--- a/libs/simulation-wasm/Cargo.toml
+++ b/libs/simulation-wasm/Cargo.toml
@@ -9,4 +9,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+rand = "0.8"
 wasm-bindgen = "0.2"
+
+lib-simulation = { path = "../simulation" }
